# Winecraft

./: .gitignore  CMakeLists.txt  vcpkg.json
dep/glad/src/: glad.c
include/: App.h  EMouseAction.h  EMouseAction.hpp  EMouseButton.h  EMouseButton.hpp  FileHelper.h  InputSystem.h  Mathf.h  Singleton.h  Typedef.h
include/Aggre/: List.h
include/Block/: Block.h  BlockData.h  BlockRenderPass.h  BlockSystem.h  Lattice.h  LatticeRenderCenter.h  Section.h  SectionsCenter.h  Structure.hpp  StructureGenerator.h  WorldInfo.h
include/Common/: CameraController.h  CubeMesh.h  CubeMesh2.hpp  FPSWatcher.h  FrameRenderPass.hpp  Rigidbody.h  SingletonNode.h  Skybox.h  SkyboxRenderPass.h
include/Core/: Branch.h  CoreSystem.h  Node.h  Object.h  Transform.h
include/Creature/: Creature.h  Player.h
include/Debug/: Debug.h  Debugable.h
include/Font/: Character.h  Font.h
include/Game/: GameSystem.h  Mode.hpp  PlaceStructureMode.hpp  StaredBlockInfo.h  StructureMode.hpp
include/Input/: Key.hpp  KeySignal.hpp  MouseButton.hpp
include/Render/: Addition.h  Camera.h  Color.h  DirectionalLight.h  FaceCull.h  FrameBuffer.h  Model.h  RenderBuffer.h  RenderPass.h  RenderSystem.h  Renderer.h  Shader.h  ShaderProgram.h  SingletonRenderPass.h  SpotLight.h  Texture.h  Vertex2.h
include/Render/Material/: ControlMaterial.h  InstanceMaterial.h  Material.h  RealMaterial.h  SingleColorMaterial.h  SkyboxMaterial.h
include/Render/Mesh/: Mesh.h  Mesh1.h  Mesh2.h  Mesh3.h  MeshBlock.h  Mesh_2D_Point.h
include/Render/Shader/: ControlShaderProgram.h  RealShaderProgram.h  Shader.h  ShaderProgram.h  SkyboxShaderProgram.h
include/Resource/: BaseCreator.h  Creator.h  Resource.h  ResourceSystem.h
include/Std/: Array.h  Basic.h  Hash.h  Hash.hpp  Map.h  Math.h  Signal.hpp  Vec.h  Veca.hpp
include/Test/: BerlinTest.h  CameraController.h  Cube.h  FPSWatcher.h  InstanceCube.h  TestNode.h
include/UI/: Button.h  Canvas.h  Control.h  ControlMesh.h  FontMesh.h  Image.h  Label.h  MeshControl.h  UIRenderPass.h
res/font/: arial.json
res/material/: container.json  control.json  geo.json  grass.json  instance.json  lightCube.json  skybox.json  ui.json
res/material/interface/: container.json
res/shader/: block_frag.json  block_vert.json  control_frag.json  control_vert.json  font_frag.json  font_vert.json  frame_frag.json  frame_vert.json  geo_frag.json  geo_geom.json  geo_vert.json  instance.json  real.json  singleColor_frag.json  skybox_frag.json  skybox_vert.json  vert0.json
res/shader/interface/: real.json  vert0.json
res/shaderProgram/: block.json  control.json  font.json  frame.json  geo.json  instance.json  real.json  singleColor.json  skybox.json
res/shaderProgram/interface/: real.json
res/texture/: aimer.json  awesomeface.json  btn.json  cactus.json  container.json  container_specular.json  control.json  dirt.json  grass.json  grass_block.json  oak_leaves.json  oak_log.json  sand.json  skybox.json  snow_block.json  stone.json
save/: 1.json  test.json
shader/: block.frag  block.vert  control.frag  control.vert  depth.frag  font.frag  font.vert  frag0.frag  frag1.frag  frag2.frag  frame.frag  frame.vert  geo.frag  geo.geom  geo.vert  instance.vert  lightFrag.frag  real.frag  skybox.frag  skybox.vert  universal.frag  vert0.vert  vert1.vert
shader/interface/: real.frag  vert0.vert
src/: App.cpp  CameraController.cpp  FileHelper.cpp  InputSystem.cpp  Mathf.cpp  TimeSystem.cpp  main.cpp
src/Block/: BlockRenderPass.cpp  BlockSystem.cpp  Lattice.cpp  LatticeRenderCenter.cpp  Section.cpp  SectionsCenter.cpp  Structure.cpp  StructureGenerator.cpp  WorldInfo.cpp
src/Common/: CameraController.cpp  CubeMesh.cpp  CubeMesh2.cpp  FPSWatcher.cpp  FrameRenderPass.cpp  Rigidbody.cpp  Skybox.cpp  SkyboxRenderPass.cpp
src/Core/: Branch.cpp  CoreSystem.cpp  Node.cpp  Transform.cpp
src/Creature/: Player.cpp
src/Font/: Character.cpp  Font.cpp
src/Game/: GameSystem.cpp  PlaceStructureMode.cpp  StructureMode.cpp
src/Render/: BlockRenderPass.cpp  Camera.cpp  Color.cpp  FrameBuffer.cpp  Model.cpp  RenderBuffer.cpp  RenderPass.cpp  RenderSystem.cpp  Renderer.cpp  Shader.cpp  ShaderProgram.cpp  SpotLight.cpp  Texture.cpp
src/Render/Material/: ControlMaterial.cpp  InstanceMaterial.cpp  Material.cpp  RealMaterial.cpp  SingleColorMaterial.cpp  SkyboxMaterial.cpp
src/Render/Mesh/: Mesh1.cpp  Mesh2.cpp  Mesh3.cpp  Mesh_2D_Point.cpp
src/Render/Shader/: RealShaderProgram.cpp  Shader.cpp  ShaderProgram.cpp
src/Resource/: ResourceSystem.cpp
src/Test/: Cube.cpp  FPSWatcher.cpp  InstanceCube.cpp  TestNode.cpp
src/UI/: Button.cpp  Canvas.cpp  Control.cpp  ControlMesh.cpp  FontMesh.cpp  Image.cpp  Label.cpp  MeshControl.cpp  UIRenderPass.cpp
src/private/: App.cpp  Border.cpp  Camera.cpp  CameraController.cpp  Cube.cpp  FileHelper.cpp  InputSystem.cpp  Mesh.cpp  Mesh1.cpp  Mesh2.cpp  Mesh3.cpp  MeshFactory.cpp  Object.cpp  Renderer.cpp  Shader.cpp  ShaderProgram.cpp  SpotLightCube.cpp  Texture.cpp  TimeSystem.cpp  Transform.cpp  main.cpp
src/private/Common/: Skybox.cpp
src/private/Core/: Branch.cpp  CoreSystem.cpp  GameObject.cpp  Node.cpp  Transform.cpp
src/private/Node/: Node.cpp  NodeSystem.cpp
src/private/Render/: Camera.cpp  DirectionalLight.cpp  FrameBuffer.cpp  Material.cpp  Model.cpp  RenderBuffer.cpp  RenderSystem.cpp  Renderer.cpp  SpotLight.cpp  Texture.cpp
src/private/Resource/: ResourceSystem.cpp
src/private/Test/: Cube.cpp  InstanceCube.cpp
src/private/UI/: Image.cpp
src/private/Update/: UpdateSystem.cpp
src/public/: App.h  Border.h  Camera.h  CameraController.h  Cube.h  DrawMode.h  InputSystem.h  Material.h  Mesh.h  Mesh1.h  Mesh2.h  Mesh3.h  MeshFactory.h  Object.h  Renderer.h  Shader.h  ShaderProgram.h  Singleton.h  SpotLightCube.h  Texture.h  TimeSystem.h  Transform.h  Transform2D.h  Typedef.h  Vertex.h  Vertex1.h  Vertex2.h
src/public/Common/: Skybox.h
src/public/Core/: Branch.h  Component.h  CoreSystem.h  GameObject.h  Node.h  Object.h  Transform.h
src/public/Debug/: Debug.h  Debugable.h
src/public/Node/: Node.h  Node2D.h  Node3D.h  NodeSystem.h  (+4 more)
(+67 files in other folders)
